corrected the About me

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-9">
             <h2>Rahul Kumar Singh</h2>
-            <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Lead, Site Reliability Engineer (SRE)">Cloud Architect</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Lead, Site Reliability Engineer (SRE), Footballer">Cloud Architect</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><button type="button" class="btn btn-primary">Resume</button></a>
               <a href="#"><button type="button" class="btn btn-secondary">Hire me</button></a>
@@ -91,7 +91,7 @@
           </div>
           <div class="col-lg-8 content">
             <p class="fst-italic py-3 contentDiv">
-              An 10+ year cloud infrastructure specialist passionate about architecting scalable, secure systems across AWS, GCP, and Azure. From automating multi-cloud deployments with Terraform to orchestrating Kubernetes migrations, I thrive on turning complex challenges into cost-optimized, high-availability solutions. Certified in Google Cloud and HashiCorp technologies, I bridge DevOps practices with business outcomes—whether slashing operational costs by 30% or mentoring teams to adopt SRE principles. Off the keyboard, I’m either trekking Himalayan trails or hunting for the perfect cup of masala chai.
+              An 10+ year cloud infrastructure specialist passionate about architecting scalable, secure systems across AWS, GCP, and Azure. From automating multi-cloud deployments with Terraform to orchestrating Kubernetes migrations, I thrive on turning complex challenges into cost-optimized, high-availability solutions. Certified in Google Cloud and HashiCorp technologies, I bridge DevOps practices with business outcomes—whether slashing operational costs by a good amount or mentoring teams to adopt SRE principles. Off the keyboard, I’m either playing football/badminton or on the road driving which is like a therapy for me.
             </p>
           </div>
         </div>
@@ -233,7 +233,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 2</h4>
@@ -241,7 +241,7 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
               <div class="hover-container">
@@ -266,7 +266,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 3</h4>
@@ -274,7 +274,7 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
               <div class="hover-container">
@@ -299,7 +299,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Branding 3</h4>
@@ -307,7 +307,7 @@
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
               <img src="assets/img/blogs/cloudrungpu.webp" class="img-fluid" alt="">
@@ -571,7 +571,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Rahul Kumar Singh</h3>
-      <p>Cloud Architect | DevOps Lead | Site Reliability Engineer (SRE)</p>
+      <p>Cloud Architect | DevOps Lead | Site Reliability Engineer (SRE) | Footballer</p>
       <div class="social-links">
         <button type="button" class="btn btn-primary">Resume</button>
         <button type="button" class="btn btn-secondary">Hire me</button>
