--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="#skills"><i class="bi bi-file-earmark-text navicon"></i><span>Skills</span></a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Expertise</span></a></li>
+        <!-- <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li> -->
       </ul>
     </nav>
 
@@ -62,7 +62,7 @@
             <p>I'm <span class="typed" data-typed-items="Cloud Architect, DevOps Lead, Site Reliability Engineer (SRE), Footballer">Cloud Architect</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
               <a href="#"><button type="button" class="btn btn-primary">Resume</button></a>
-              <a href="#"><button type="button" class="btn btn-secondary">Hire me</button></a>
+              <a href="mailto:rahul.k.singh1807@gmail.com?subject=Let's%20talk%20%3A)"><button type="button" class="btn btn-secondary">Email me</button></a>
             </div>
             <div class="social-links">
               <a href="https://x.com/rahul_singh1807" target="_blank"><i class="bi bi-twitter-x"></i></a>
@@ -87,7 +87,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/professional_rahul.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/professional_rahul.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <p class="fst-italic py-3 contentDiv">
@@ -164,8 +164,8 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-blog">Blogs</li>
             <li data-filter=".filter-cblog">Collaboration Blogs</li>
-            <li data-filter=".filter-publicspeaking">Public Speaking</li>
             <li data-filter=".filter-certifications">Certifications</li>
+            <li data-filter=".filter-publicspeaking">Public Speaking</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -187,19 +187,14 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
-              <img src="assets/img/public-speaking/migration-ps.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h6 class="content">Cloud Migration: Easy or Big Mistake?</h6>
-                <a href="https://www.youtube.com/watch?v=WDGvcBhKtZo&list=PLjiOPWDKDXnV3M8taZBbqfRrVyVym87EQ&t=24199s" target="_blank" class="btn btn-primary">Watch Here</a>
-              </div>
-            </div>End Portfolio Item -->
+            
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
               <div class="video-container">
                 <iframe 
                   src="https://www.youtube.com/embed/WDGvcBhKtZo?start=24199&list=PLjiOPWDKDXnV3M8taZBbqfRrVyVym87EQ" 
-                  title="Cloud Migration: Easy or Big Mistake?" 
-                  class="img-fluid" 
+                  title="Cloud Migration: Easy or Big Mistake?"
+                  width="500" height="500" 
+                  class="img-fluid " 
                   frameborder="0" 
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                   allowfullscreen>
@@ -210,10 +205,11 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
-              <div class="hover-container">
-                <img src="assets/certifications/psacert.png" class="img-fluid hover-image" alt="">
-                <!-- <img src="assets/certifications/psacert.png" class="img-style hoverable" alt="gcp-professional-cloud-architect-certification"> -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-certifications">
+              <img src="assets/certifications/psacert.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h6 class="content">Google Cloud Certified <br> Professional Cloud Architect</h6>
+                <a href="assets/certifications/psacert.png" title="Google Cloud" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -233,20 +229,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-certifications">
+              <img src="assets/certifications/pcdecert.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
-              <div class="hover-container">
-                <img src="assets/certifications/pcdecert.png" class="img-fluid hover-image" alt="">
-                <!-- <img src="assets/certifications/psacert.png" class="img-style hoverable" alt="gcp-professional-cloud-architect-certification"> -->
+                <h6 class="content">Google Cloud Certified <br> Professional Cloud DevOps Engineer</h6>
+                <a href="assets/certifications/psacert.png" title="Google Cloud" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -266,20 +253,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-certifications">
+              <img src="assets/certifications/terraformcert.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 isotope-item filter-certifications">
-              <div class="hover-container">
-                <img src="assets/certifications/terraformcert.png" class="img-fluid hover-image" alt="">
-                <!-- <img src="assets/certifications/psacert.png" class="img-style hoverable" alt="gcp-professional-cloud-architect-certification"> -->
+                <h6 class="content">HashiCorp Cloud Engineer Certifications</h6>
+                <a href="assets/certifications/terraformcert.png" title="HashiCorp" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -298,16 +276,6 @@
                 <a href="https://medium.com/google-cloud/service-mesh-uncharted-google-cloud-service-mesh-aka-asm-part-2-accd2c48e539" target="_blank" class="btn btn-primary">Read More</a>
               </div>
             </div><!-- End Portfolio Item -->
-
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-publicspeaking">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div>End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-blog">
               <img src="assets/img/blogs/cloudrungpu.webp" class="img-fluid" alt="">
@@ -353,7 +321,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
+        <h2>Expertise</h2>
         <p>Unlock the full potential of your cloud journey with tailored services designed to transform, automate, and optimize your infrastructure. From architecture design to cost efficiency and technical mentorship, I deliver solutions that drive innovation and reliability.</p>
       </div><!-- End Section Title -->
 
@@ -487,94 +455,15 @@
       </div>
     </section><!-- /Services Section -->
 
-    
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4">
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-              <i class="bi bi-geo-alt flex-shrink-0"></i>
-              <div>
-                <h3>Address</h3>
-                <p>Flat No. 2104, Tower Ridhi, Mahagun Mantra-1</p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-telephone flex-shrink-0"></i>
-              <div>
-                <h3>Call Me</h3>
-                <p>+91 7899150594</p>
-              </div>
-            </div><!-- End Info Item -->
-
-            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-envelope flex-shrink-0"></i>
-              <div>
-                <h3>Email Me</h3>
-                <p>rahul.k.singh1807@gmail.com</p>
-              </div>
-            </div><!-- End Info Item -->
-
-          </div>
-
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Contact Section -->
-
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer  id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Rahul Kumar Singh</h3>
       <p>Cloud Architect | DevOps Lead | Site Reliability Engineer (SRE) | Footballer</p>
       <div class="social-links">
-        <button type="button" class="btn btn-primary">Resume</button>
-        <button type="button" class="btn btn-secondary">Hire me</button>
+        <button type="button" class="btn btn-primary buttonContent"><a href="assets/img/Rahul-Kumar-Singh-Resume.pdf" target="_blank" class="bgNone">Resume</a></button>
+        <button type="button" class="btn btn-secondary buttonContent"><a href="mailto:rahul.k.singh1807@gmail.com?subject=Let's%20talk%20%3A)"  class="bgNone">Email me</a></button>
       </div>
       <div class="container">
         <div class="copyright">
