--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Expertise</h2>
-        <p>Unlock the full potential of your cloud journey with tailored services designed to transform, automate, and optimize your infrastructure. From architecture design to cost efficiency and technical mentorship, I deliver solutions that drive innovation and reliability.</p>
+        <p>Unlock the full potential of your cloud journey with my expertise in transforming, automating, and optimizing infrastructure. With a strong foundation in architecture design, cost efficiency, and technical mentorship, I bring solutions that drive innovation and ensure reliability.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
