--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/professional_rahul.jpg" class="img-fluid" alt="">
+            <img src="assets/img/S18_6268.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <p class="fst-italic py-3 contentDiv">
