--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Rahul kumar Singh</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">Rahul Kumar Singh</strong> <span>All Rights Reserved</span>
         </div>
       </div>
     </div>
